# pageseeds-cli

./: .gitignore  AGENTS.MD  ARCHITECTURE.md  CONTRIBUTING.md  PLAN_SEO_REVIEW.md  README.md  dashboard  pyproject.toml
dashboard_ptk/: .gitignore  AGENT_GUIDE.md  EXTERNAL_USE_GUIDE.md  GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup_gitignore.py  test_collection.py  test_copilot_adapter.py  test_e2e_collection.py  test_reddit_adapter.py
dashboard_ptk/dashboard/: __init__.py  batch.py  cli.py  cli_articles.py  cli_task_actions.py  cli_verification.py  config.py  setup_validator.py  unified_cli.py  workflow_bundle.py
dashboard_ptk/tests/: run_tests.py  test_agent_runtime_tempfiles.py  test_all.py  test_cli_composition.py  test_cli_entrypoint_health.py  test_content_locator.py  test_content_sync.py  test_date_manager.py  test_engine_migration.py  test_env_resolver.py  test_errors.py  test_frontmatter_dates.py  test_integrity_checker.py  test_keyword_research.py  test_no_subprocess_outside_engine.py  test_normalizers_engine.py  test_orchestrator_policy.py  test_orchestrator_service.py  test_project_manager.py  test_project_preflight.py  test_reddit_autopost_preflight.py  test_reddit_cli_auth_status.py  test_reddit_history_path.py  test_run_sh_bootstrap.py  test_scheduler_due_and_dedupe.py  test_scheduler_policy_load_defaults.py  test_scheduler_service_cycle.py  test_scheduler_status_file_contract.py  test_scheduler_system_service.py  test_slug_generation.py  test_task_list_safety.py  test_tool_registry.py  test_workflow_bundle_contract.py
(+122 files in other folders)
