[build-system]
requires = ["setuptools~=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pageseeds-cli"
version = "1.0.0"
description = "PageSeeds CLI for SEO automation workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit~=3.0.50",
    "rich~=13.9.0",
    "mcp~=1.6.0",
    "fastmcp~=2.2.0",
    "pydantic~=2.10.0",
    "redditwarp>=1.0.0",
    "requests~=2.32.0",
    "playwright~=1.51.0",
    "praw~=7.8.0",
    "python-dotenv~=1.0.0",
    "google-api-python-client~=2.150.0",
    "google-auth~=2.35.0",
    "google-auth-oauthlib~=1.2.0",
    "tomli~=2.0.0",
]

[project.scripts]
pageseeds = "dashboard:main"
task-dashboard = "dashboard:main"

[tool.setuptools.packages.find]
where = ["dashboard_ptk", "packages/automation-cli/src", "packages/seo-cli/src", "packages/seo-content-cli/src"]
include = ["dashboard*", "automation_mcp*", "seo_mcp*", "seo_content_mcp*"]
